LAST COMMIT UTS

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <!-- Navbar -->
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="index.html" style="display: flex; align-items: center;">
     <img src="images/logo.png" alt="Logo" style="width: 50px; height: 50px; border-radius: 50%; margin-right: 10px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);">
@@ -93,9 +93,9 @@
         <a href="detail_info2.html" class="btn btn-primary">Lihat Detail</a>
       </div>
       <div class="col-md-4 text-center">
-        <img src="images/ayang3.jpeg" alt="Hubungi Kami">
-        <h3>Hubungi Kami</h3>
-        <p>Informasi kontak untuk kolaborasi dan kerja sama.</p>
+        <img src="images/ayang3.jpeg" alt="Keamanan Kami">
+        <h3>Keamanan Kami</h3>
+        <p>Informasi Perihal Keamanan Data Pengguna Absensi.</p>
         <a href="detail_info3.html" class="btn btn-primary">Lihat Detail</a>
       </div>
     </div>
